--- a/v2_fa.html
+++ b/v2_fa.html
@@ -531,168 +531,168 @@
         </div>
         <div id="EditOverlay" class="overlay">
             <textarea id="Kinks">
-#Bodies
-(General)
-* Skinny
-* Chubby
-* Small breasts
-* Large breasts
-* Small cocks
-* Large cocks
+#بدن‌ها
+(عمومی)
+* لاغر
+* چاق
+* سینه‌های کوچک
+* سینه‌های بزرگ
+* کیر کوچک
+* کیر بزرگ
 
-#Clothing
-(Self, Partner)
-* Clothed sex
-* Lingerie
-* Stockings
-* Heels
-* Leather
-* Latex
-* Uniform / costume
-* Cross-dressing
+#لباس
+(خود، شریک جنسی)
+* سکس با لباس پوشیده
+* لباس زیر زنانه
+* جوراب ساق بلند
+* کفش پاشنه بلند
+* چرم
+* لاتکس
+* یونیفرم / لباس مبدل
+* لباس پوشیدن
 
-#Groupings
-(General)
-* You and 1 male
-* You and 1 female
-* You and MtF trans
-* You and FtM trans
-* You and 1 male, 1 female
-* You and 2 males
-* You and 2 females
-* Orgy
+#گروه‌بندی‌ها
+(عمومی)
+* شما و ۱ مرد
+* شما و ۱ زن
+* شما و ترنس MtF
+* شما و ترنس FtM
+* شما و ۱ مرد، ۱ زن
+* شما و ۲ مرد
+* شما و ۲ زن
+* عیاشی
 
-#General
-(Giving, Receiving)
-* Romance / Affection
-* Handjob / fingering
-* Blowjob
-* Deep throat
-* Swallowing
-* Facials
-* Cunnilingus
-* Face-sitting
-* Edging
-* Teasing
-* JOI, SI
+#عمومی
+(دادن، گرفتن)
+* عاشقانه / محبت
+* جلق زدن با دست / انگشت کردن
+* ساک زدن
+* گلوی عمیق
+* بلعیدن
+* ماساژ صورت
+* تحریک واژن
+* نشستن روی صورت
+* لبه‌دار کردن
+* اذیت کردن
+* JOI، SI
 
-#Ass play
-(Giving, Receiving)
-* Anal toys
-* Anal sex, pegging
-* Rimming
-* Double penetration
-* Anal fisting
+#باسن بازی
+(دادن، گرفتن)
+* اسباب‌بازی‌های مقعدی
+* سکس مقعدی، میخ‌گذاری
+* لیسیدن آلت تناسلی مردانه
+* دخول دوگانه
+* مشت کردن مقعدی
 
-#Restrictive
-(Self, Partner)
-* Gag
-* Collar
-* Leash
-* Chastity
-* Bondage (Light)
-* Bondage (Heavy)
-* Encasement
+#محدودکننده
+(خود، شریک جنسی)
+* دهان‌بند
+* قلاده
+* قلاده
+* عفت
+* بندگی (سبک)
+* بندگی (سنگین)
+* محفظه
 
-#Toys
-(Self, Partner)
-* Dildos
-* Plugs
-* Vibrators
-* Sounding
+#اسباب‌بازی‌ها
+(خود، شریک جنسی)
+* دیلدوها
+* پلاگ‌ها
+* ویبراتورها
+* صدا دادن
 
-#Domination
-(Dominant, Submissive)
-* Dominant / Submissive
-* Domestic servitude
-* Slavery
-* Pet play
-* DD/lg, MD/lb
-* Discipline
-* Begging
-* Forced orgasm
-* Orgasm control
-* Orgasm denial
-* Power exchange
+#سلطه
+(غالب، مطیع)
+* غالب / مطیع
+* خدمت خانگی
+* بردگی
+* بازی با حیوانات خانگی
+* DD/lg، MD/lb
+* انضباط
+* التماس
+* ارگاسم اجباری
+* کنترل ارگاسم
+* انکار ارگاسم
+* تبادل قدرت
 
-#No consent
-(Aggressor, Target)
-* Non-con / rape
-* Blackmail / coercion
-* Kidnapping
-* Drugs / alcohol
-* Sleep play
+#بدون رضایت
+(متجاوز، هدف)
+* عدم کلاهبرداری / تجاوز جنسی
+* باج‌گیری / اجبار
+* آدم‌ربایی
+* مواد مخدر / الکل
+* خواب بازی
 
-#Taboo
-(General)
-* Incest
-* Ageplay
-* Interracial / Raceplay
-* Bestiality
-* Necrophilia
-* Cheating
-* Exhibitionism
-* Voyeurism
+#تابو
+(عمومی)
+* محارم
+* بازی با سن
+* بازی بین نژادی / مسابقه‌ای
+* رابطه جنسی با حیوانات
+* مرده‌خواهی
+* خیانت
+* خودنمایی
+* چشم‌چرانی
 
-#Surrealism
-(Self, Partner)
-* Futanari
-* Furry
-* Vore
-* Transformation
-* Tentacles
-* Monster or Alien
+#سورئالیسم
+(خود، شریک جنسی)
+* فوتاناری
+* پشمالو
+* شهوت‌رانی
+* تغییر شکل
+* شاخک‌ها
+* هیولا یا موجود فضایی
 
-#Fluids
-(General)
-* Blood
-* Watersports
-* Scat
-* Lactation
-* Diapers
-* Cum play
+#مایعات
+(عمومی)
+* خون
+* ورزش‌های آبی
+* مدفوع
+* شیردهی
+* پوشک
+* بازی با انزال
 
-#Degradation
-(Giving, Receiving)
-* Glory hole
-* Name calling
-* Humiliation
+#تحقیر
+(دادن، گرفتن)
+* سوراخ افتخار
+* فحش دادن
+* تحقیر
 
-#Touch & Stimulation
-(Actor, Subject)
-* Cock/Pussy worship
-* Ass worship
-* Foot play
-* Tickling
-* Sensation play
-* Electro stimulation
+#لمس و تحریک
+(بازیگر، سوژه)
+* پرستش آلت تناسلی مردانه/کس
+* پرستش باسن
+* بازی با پا
+* قلقلک دادن
+* بازی حسی
+* تحریک الکتریکی
 
-#Misc. Fetish
-(Giving, Receiving)
-* Fisting
-* Gangbang
-* Breath play
-* Impregnation
-* Pregnancy
-* Feminization
-* Cuckold / Cuckquean
+#متفرقه فتیش
+(دادن، گرفتن)
+* مشت کردن
+* گنگ بنگ
+* بازی نفس
+* آبستن کردن
+* بارداری
+* زنانه سازی
+* زن زانیه / کاک کویین
 
-#Pain
-(Giving, Receiving)
-* Light pain
-* Heavy pain
-* Nipple clamps
-* Clothes pins
-* Caning
-* Flogging
-* Beating
-* Spanking
-* Cock/Pussy slapping
-* Cock/Pussy torture
-* Hot Wax
-* Scratching
-* Biting
-* Cutting
+#درد
+(دادن، گرفتن)
+* درد خفیف
+* درد شدید
+* گیره نوک سینه
+* سنجاق لباس
+* چوب زدن
+* شلاق زدن
+* کتک زدن
+* تنبیه بدنی
+* سیلی زدن به آلت تناسلی مردانه/کس
+* شکنجه آلت تناسلی مردانه/کس
+* موم داغ
+* خاراندن
+* گاز گرفتن
+* بریدن
             </textarea>
             <button id="KinksOK">Accept</button>
         </div>
