--- a/v2_fa.html
+++ b/v2_fa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Kinklist</title>
+        <title>پرسشنامه</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -514,12 +514,12 @@
             <button id="Edit"></button>
             <h1>Kink list</h1>
             <div class="legend">
-                <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">Not Entered</span></div>
-                <div><span data-color="#6DB5FE" class="choice favorite"></span> <span class="legend-text">Favorite</span></div>
-                <div><span data-color="#23FD22" class="choice like"></span> <span class="legend-text">Like</span></div>
-                <div><span data-color="#FDFD6B" class="choice okay"></span> <span class="legend-text">Okay</span></div>
-                <div><span data-color="#DB6C00" class="choice maybe"></span> <span class="legend-text">Maybe</span></div>
-                <div><span data-color="#920000" class="choice no"></span> <span class="legend-text">No</span></div>
+                <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">بدون پاسخ</span></div>
+                <div><span data-color="#6DB5FE" class="choice favorite"></span> <span class="legend-text">عاشقشم</span></div>
+                <div><span data-color="#23FD22" class="choice like"></span> <span class="legend-text">دوست دارم</span></div>
+                <div><span data-color="#FDFD6B" class="choice okay"></span> <span class="legend-text">قابل قبول</span></div>
+                <div><span data-color="#DB6C00" class="choice maybe"></span> <span class="legend-text">شاید</span></div>
+                <div><span data-color="#920000" class="choice no"></span> <span class="legend-text">نه</span></div>
             </div>
             <div id="ExportWrapper">
                 <input type="text" id="URL">
@@ -531,8 +531,8 @@
         </div>
         <div id="EditOverlay" class="overlay">
             <textarea id="Kinks">
-#بدن‌ها
-(عمومی)
+#فرم بدن (عمومی)
+(خودم , شریک)
 * لاغر
 * چاق
 * سینه‌های کوچک
