--- a/v2_fa.html
+++ b/v2_fa.html
@@ -531,8 +531,8 @@
         </div>
         <div id="EditOverlay" class="overlay">
             <textarea id="Kinks">
-#فرم بدن (عمومی)
-(خودم , شریک)
+#فرم بدن (علاقه عمومی)
+(خودم , شریکم)
 * لاغر
 * چاق
 * سینه‌های کوچک
@@ -541,26 +541,14 @@
 * کیر بزرگ
 
 #لباس
-(خود، شریک جنسی)
-* سکس با لباس پوشیده
-* لباس زیر زنانه
-* جوراب ساق بلند
-* کفش پاشنه بلند
-* چرم
-* لاتکس
-* یونیفرم / لباس مبدل
-* لباس پوشیدن
+(خود، شریکم )
+* انتخاب لباس توسط   
 
-#گروه‌بندی‌ها
+#رابطه گروهی
 (عمومی)
-* شما و ۱ مرد
-* شما و ۱ زن
-* شما و ترنس MtF
-* شما و ترنس FtM
-* شما و ۱ مرد، ۱ زن
-* شما و ۲ مرد
-* شما و ۲ زن
-* عیاشی
+* FFM 
+* Brat Taiming
+* رابطه با جنس موافق
 
 #عمومی
 (دادن، گرفتن)
@@ -584,22 +572,24 @@
 * دخول دوگانه
 * مشت کردن مقعدی
 
-#محدودکننده
-(خود، شریک جنسی)
-* دهان‌بند
-* قلاده
-* قلاده
-* عفت
-* بندگی (سبک)
-* بندگی (سنگین)
-* محفظه
+#محدودیت (Ropebonneies)
+(خودم، شریکم )
+* گگ
+* چوکر
+* Leash
+* Chasity
+* باتداژ سبک
+* بانداژ سنگین
+* قفس
 
-#اسباب‌بازی‌ها
+#ابزار
 (خود، شریک جنسی)
-* دیلدوها
-* پلاگ‌ها
-* ویبراتورها
-* صدا دادن
+* دیلدو
+* پلاگ
+* ویبراتور
+* هشدار دهنده
+* محرک الکتریکی
+* توپ وگر
 
 #سلطه
 (غالب، مطیع)
