--- a/v2_fa.html
+++ b/v2_fa.html
@@ -532,7 +532,7 @@
         <div id="EditOverlay" class="overlay">
             <textarea id="Kinks">
 #فرم بدن (علاقه عمومی)
-(خودم , شریکم)
+(خودم, شریکم)
 * لاغر
 * چاق
 * سینه‌های کوچک
@@ -541,7 +541,7 @@
 * کیر بزرگ
 
 #لباس
-(خود، شریکم )
+(خودم, شریکم)
 * انتخاب لباس توسط   
 
 #رابطه گروهی
@@ -572,8 +572,8 @@
 * دخول دوگانه
 * مشت کردن مقعدی
 
-#محدودیت (Ropebonneies)
-(خودم، شریکم )
+#محدودیت (Rope Bunny)
+(خودم, شریکم)
 * گگ
 * چوکر
 * Leash
@@ -583,7 +583,7 @@
 * قفس
 
 #ابزار
-(خود، شریک جنسی)
+(خودم )
 * دیلدو
 * پلاگ
 * ویبراتور
