--- a/v2_fa.html
+++ b/v2_fa.html
@@ -551,29 +551,25 @@
 * رابطه با جنس موافق
 
 #عمومی
-(دادن، گرفتن)
-* عاشقانه / محبت
-* جلق زدن با دست / انگشت کردن
-* ساک زدن
-* گلوی عمیق
-* بلعیدن
+(دادن, گرفتن)
+* محبت / عشق
+* ساک زدن  
 * ماساژ صورت
 * تحریک واژن
-* نشستن روی صورت
-* لبه‌دار کردن
-* اذیت کردن
-* JOI، SI
+* Face Sitting 
+* ‌کنترل ارگاسم 
+* خود ارضایی
 
-#باسن بازی
-(دادن، گرفتن)
-* اسباب‌بازی‌های مقعدی
-* سکس مقعدی، میخ‌گذاری
-* لیسیدن آلت تناسلی مردانه
+#باسن 
+(گرفتن)
+* ابزار مقعدی
+* سکس مقعدی
+* Rimming
 * دخول دوگانه
-* مشت کردن مقعدی
+* مشت مقعدی
 
 #محدودیت (Rope Bunny)
-(خودم, شریکم)
+(خودم)
 * گگ
 * چوکر
 * Leash
@@ -590,39 +586,6 @@
 * هشدار دهنده
 * محرک الکتریکی
 * توپ وگر
-
-#سلطه
-(غالب، مطیع)
-* غالب / مطیع
-* خدمت خانگی
-* بردگی
-* بازی با حیوانات خانگی
-* DD/lg، MD/lb
-* انضباط
-* التماس
-* ارگاسم اجباری
-* کنترل ارگاسم
-* انکار ارگاسم
-* تبادل قدرت
-
-#بدون رضایت
-(متجاوز، هدف)
-* عدم کلاهبرداری / تجاوز جنسی
-* باج‌گیری / اجبار
-* آدم‌ربایی
-* مواد مخدر / الکل
-* خواب بازی
-
-#تابو
-(عمومی)
-* محارم
-* بازی با سن
-* بازی بین نژادی / مسابقه‌ای
-* رابطه جنسی با حیوانات
-* مرده‌خواهی
-* خیانت
-* خودنمایی
-* چشم‌چرانی
 
 #سورئالیسم
 (خود، شریک جنسی)
