--- a/v2_fa.html
+++ b/v2_fa.html
@@ -587,51 +587,22 @@
 * محرک الکتریکی
 * توپ وگر
 
-#سورئالیسم
-(خود، شریک جنسی)
-* فوتاناری
-* پشمالو
-* شهوت‌رانی
-* تغییر شکل
-* شاخک‌ها
-* هیولا یا موجود فضایی
-
 #مایعات
 (عمومی)
 * خون
-* ورزش‌های آبی
-* مدفوع
+* خوردن مایعات جنسی
 * شیردهی
-* پوشک
-* بازی با انزال
+* تنقیه
 
-#تحقیر
-(دادن، گرفتن)
-* سوراخ افتخار
-* فحش دادن
-* تحقیر
-
-#لمس و تحریک
-(بازیگر، سوژه)
-* پرستش آلت تناسلی مردانه/کس
-* پرستش باسن
-* بازی با پا
-* قلقلک دادن
-* بازی حسی
-* تحریک الکتریکی
-
-#متفرقه فتیش
-(دادن، گرفتن)
-* مشت کردن
-* گنگ بنگ
-* بازی نفس
+#متفرقه 
+(دادن, گرفتن)
+* مشت کردن واژن
+* Breath Play 
 * آبستن کردن
-* بارداری
-* زنانه سازی
-* زن زانیه / کاک کویین
+* Cuck Paly
 
 #درد
-(دادن، گرفتن)
+(دادن, گرفتن)
 * درد خفیف
 * درد شدید
 * گیره نوک سینه
@@ -640,10 +611,9 @@
 * شلاق زدن
 * کتک زدن
 * تنبیه بدنی
-* سیلی زدن به آلت تناسلی مردانه/کس
-* شکنجه آلت تناسلی مردانه/کس
-* موم داغ
-* خاراندن
+* سیلی زدن به آلت تناسلی
+* شکنجه آلت تناسلی 
+* Wax Play
 * گاز گرفتن
 * بریدن
             </textarea>
