--- a/v2_fa.html
+++ b/v2_fa.html
@@ -512,7 +512,7 @@
     <body>
         <div class="widthWrapper">
             <button id="Edit"></button>
-            <h1>Kink list</h1>
+            <h1> پرسشنامه علایق</h1>
             <div class="legend">
                 <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">بدون پاسخ</span></div>
                 <div><span data-color="#6DB5FE" class="choice favorite"></span> <span class="legend-text">عاشقشم</span></div>
